# Ginasio

./: docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/models/: models.py
